# mizugaki

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
examples/explain-cli/: CMakeLists.txt  README.md  ddl_interpreter.cpp  ddl_interpreter.h  example_prototype_processor.cpp  example_prototype_processor.h  main.cpp  options.cpp  options.h
examples/parser-cli/: CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt
src/mizugaki/: document_map.cpp  placeholder_entry.cpp  placeholder_map.cpp
src/mizugaki/analyzer/: sql_analyzer.cpp  sql_analyzer_impl.cpp  sql_analyzer_impl.h  sql_analyzer_options.cpp  sql_analyzer_result.cpp
src/mizugaki/analyzer/details/: analyze_description.cpp  analyze_description.h  analyze_literal.cpp  analyze_literal.h  analyze_name.cpp  analyze_name.h  analyze_query_expression.cpp  analyze_query_expression.h  analyze_scalar_expression.cpp  analyze_scalar_expression.h  analyze_statement.cpp  analyze_statement.h  analyze_type.cpp  analyze_type.h  analyzer_context.cpp  analyzer_context.h  column_info.cpp  column_info.h  find_element_result.h  find_result.h  find_symbol_result.h  name_print_support.h  name_printer.h  query_info.cpp  query_info.h  query_scope.cpp  query_scope.h  relation_info.cpp  relation_info.h  row_value_context.cpp  row_value_context.h  scalar_value_context.cpp  scalar_value_context.h  set_function_processor.cpp  set_function_processor.h  symbol_kind.h  value_context.cpp  value_context.h  value_context_kind.h
src/mizugaki/ast/: compare_utils.h  compilation_unit.cpp  node.cpp  node_region.cpp
src/mizugaki/ast/common/: serializers.cpp  serializers.h  sort_element.cpp  target_element.cpp
src/mizugaki/ast/literal/: boolean.cpp  datetime.cpp  interval.cpp  literal.cpp  numeric.cpp  string.cpp  utils.h
src/mizugaki/ast/name/: name.cpp  qualified.cpp  simple.cpp
src/mizugaki/ast/query/: binary_expression.cpp  corresponding_clause.cpp  expression.cpp  group_by_clause.cpp  grouping_column.cpp  grouping_element.cpp  query.cpp  select_all_fields.cpp  select_asterisk.cpp  select_column.cpp  select_element.cpp  table_reference.cpp  table_value_constructor.cpp  with_element.cpp  with_expression.cpp
src/mizugaki/ast/scalar/: between_predicate.cpp  binary_expression.cpp  builtin_function_invocation.cpp  builtin_set_function_invocation.cpp  case_expression.cpp  case_when_clause.cpp  cast_expression.cpp  comparison_predicate.cpp  convert_expression.cpp  current_of_cursor.cpp  expression.cpp  extract_expression.cpp  field_reference.cpp  function_invocation.cpp  host_parameter_reference.cpp  in_predicate.cpp  literal_expression.cpp  method_invocation.cpp  new_invocation.cpp  pattern_match_predicate.cpp  placeholder_reference.cpp  quantified_comparison_predicate.cpp  set_function_invocation.cpp  static_method_invocation.cpp  subquery.cpp  table_predicate.cpp  trim_expression.cpp  unary_expression.cpp  value_constructor.cpp  variable_reference.cpp
src/mizugaki/ast/statement/: alter_index_action.cpp  alter_index_statement.cpp  alter_table_action.cpp  alter_table_statement.cpp  column_constraint_definition.cpp  column_definition.cpp  constraint.cpp  delete_statement.cpp  drop_statement.cpp  empty_statement.cpp  expression_constraint.cpp  grant_privilege_statement.cpp  identity_column_restart_option.cpp  identity_constraint.cpp  index_definition.cpp  insert_statement.cpp  key_constraint.cpp  privilege_action.cpp  privilege_object.cpp  privilege_user.cpp  referential_constraint.cpp  rename_column_action.cpp  rename_index_action.cpp  rename_table_action.cpp  revoke_privilege_statement.cpp  schema_definition.cpp  select_statement.cpp  sequence_definition.cpp  set_element.cpp  simple_constraint.cpp  statement.cpp  storage_parameter.cpp  table_constraint_definition.cpp  table_definition.cpp  table_element.cpp  truncate_table_statement.cpp  update_statement.cpp  utils.h  view_definition.cpp
src/mizugaki/ast/table/: apply.cpp  correlation_clause.cpp  expression.cpp  join.cpp  join_columns.cpp  join_condition.cpp  join_specification.cpp  subquery.cpp  table_reference.cpp  unnest.cpp
src/mizugaki/ast/type/: binary_numeric.cpp  bit_string.cpp  character_string.cpp  collection.cpp  datetime.cpp  decimal.cpp  field_definition.cpp  interval.cpp  octet_string.cpp  row.cpp  simple.cpp  type.cpp  user_defined.cpp  utils.h
src/mizugaki/parser/: sql_driver.cpp  sql_driver.h  sql_parser.cpp  sql_parser.yy  sql_parser_diagnostic.cpp  sql_parser_options.cpp  sql_parser_result.cpp  sql_scanner.cpp  sql_scanner.h  sql_scanner.ll  sql_tree_validator.cpp  sql_tree_validator.h
src/mizugaki/parser/details/: sequence_option_field.h  sequence_option_field_kind.h  sequence_options.h
src/mizugaki/translator/: shakujo_translator.cpp  shakujo_translator_context.cpp  shakujo_translator_context_impl.cpp  shakujo_translator_context_impl.h  shakujo_translator_diagnostic.cpp  shakujo_translator_impl.cpp  shakujo_translator_impl.h  shakujo_translator_options.cpp  shakujo_translator_result.cpp
src/mizugaki/translator/details/: aggregate_analyzer.cpp  aggregate_analyzer.h  ddl_statement_translator.cpp  ddl_statement_translator.h  dml_statement_translator.cpp  dml_statement_translator.h  (+14 more)
test/: CMakeLists.txt  deleteme_test.cpp
test/mizugaki/analyzer/: sql_analyzer_test.cpp  utils.h
test/mizugaki/ast/: literal_dispatch_test.cpp  name_dispatch_test.cpp  node_region_test.cpp  query_dispatch_test.cpp  scalar_dispatch_test.cpp  statement_dispatch_test.cpp  table_dispatch_test.cpp  type_dispatch_test.cpp  utils.h
test/mizugaki/parser/: sql_driver_test.cpp  sql_parser_element_kind_test.cpp  sql_parser_error_test.cpp  sql_parser_function_test.cpp  sql_parser_limit_test.cpp  sql_parser_literal_test.cpp  sql_parser_misc_test.cpp  sql_parser_predicate_test.cpp  sql_parser_query_test.cpp  sql_parser_scalar_test.cpp  sql_parser_statement_alter_test.cpp  sql_parser_statement_test.cpp  sql_parser_table_test.cpp  sql_parser_test.cpp  sql_parser_type_test.cpp  sql_tree_validator_test.cpp  utils.h
test/mizugaki/translator/: shakujo_translator_test.cpp
(+278 files in other folders)
